--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -20,14 +20,13 @@ jobs:
           node-version: 16.x
           cache: npm
       - name: Installing dependencies
-          run: npm ci
-            - name: ESLint checker
-              run: npm run lint:js
-            - name: StyleLint checker
-              run: npm run lint:css
-            - name: Build
-              run:
-                npm run build
+        run: npm ci
+      - name: ESLint checker
+        run: npm run lint:js
+      - name: StyleLint checker
+        run: npm run lint:css
+      - name: Build
+        run: npm run build
 
   merge:
     name: merge
@@ -48,12 +47,13 @@ jobs:
       - name: StyleLint checker
         run: npm run lint:css
       - name: Build and validate
-        run:
+        run: |
           npm run build
           npm run analyze
           npm run validator
       - name: Deploy to Github Pages
-        - run: git config --global user.name "AnimeLore"
-        - run: git config --global user.email "animelorenoreply@gmail.com"
-        - run: git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
-        - run: npm run deploy
+        run: |
+          git config --global user.name "AnimeLore"
+          git config --global user.email "animelorenoreply@gmail.com"
+          git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
+          npm run deploy
